--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Teste Bootstrap</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light margin">
        <a class="navbar-brand" href="#">
            <img src="img/GLStudio.png" width="220">
        </a>
@@ -35,9 +35,52 @@
         <div class="container-fluid quem-somos text-center margin">
             <h3>Quem somos </h3>
             <img src="img/time.jpeg" class="rounded-circle" width="400" height="400"> 
+            <h3>Somos um time comprometido com os resultados!</h3>
         </div>
     </section>
        
-
+    <selection id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3 class="margin">Parceiros</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/logo-white.png" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-white.png" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-white.png" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </selection>
+    <section class ="servios">
+        <div class="container fluid text-center margin servicos">
+            <h3 class="margin">Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod minus temporibus ratione doloremque. Amet, 
+                            impedit atque libero doloribus ad, adipisci dolores sapiente quibusdam odio sunt quis ab quaerat expedita ipsum.</p>
+                        <img src="img/app.jpeg" width="100%">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo totam veniam quia sunt a nesciunt provident 
+                            deserunt dolorem dolorum in voluptatibus velit dignissimos dolor, facilis, doloribus corrupti voluptates eveniet repellat.
+                        </p>
+                        <img src="img/site3.jpeg" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por Guilherme Bismark</p>
+    </footer>
 </body>
+
 </html>
